2009-07-12  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (hyperg_U_int_bge1): avoid using the series when
	1+a-b is zero or a negative integer.

2009-07-11  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_U.c (gsl_sf_hyperg_U_int_e10_e, gsl_sf_hyperg_U_e10_e)
	(hyperg_U_origin, hyperg_U_int_origin): added special case for
	U(a,b,z=0).

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* mathieu_workspace.c (gsl_sf_mathieu_free): handle NULL argument
	in free

2009-05-13  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_2F1.c (gsl_sf_hyperg_2F1_e): fix condition on a and b
	when c is a negative integer (either a or b must cause
	cancellation of the series)

2009-01-14  Brian Gough  <bjg@network-theory.co.uk>

	* mathieu_workspace.c (gsl_sf_mathieu_alloc): increase number of
	terms

	* mathieu_charv.c (gsl_sf_mathieu_a): increase number of terms
	(gsl_sf_mathieu_b): increase number of terms

2008-12-04  Brian Gough  <bjg@network-theory.co.uk>

	* gamma_inc.c (gamma_inc_D): propagate cancellation error
	in (x-a)/x for x close to a

2008-12-03  Brian Gough  <bjg@network-theory.co.uk>

	* exp.c (exprel_n_CF): changed N to double, to allow non-integer
	usage for gamma_inc, double error factor to allow for two
	parameters in recurrence.
	(gsl_sf_exprel_n_CF_e): exported function to allow calls to
	exprel_n_CF

	* gamma_inc.c (gamma_inc_P_series): improved convergence condition
	using estimate of the remainder of the series, added continued
	fraction as a fallback, increased nmax to 10000

2008-08-26  Brian Gough  <bjg@network-theory.co.uk>

	* ellint.c (gsl_sf_ellint_Kcomp_e): corrected taylor expansion for
	k close to 1.

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-06-27  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_array_size): removed inline
	version of this function in gsl_sf_legendre.h
